2001-10-25  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* credits.txt: added Oblivious as an artist

2001-10-24  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc: Only auto-set hostile NPC's into combat mode (not
	chaotic).
	* gamewin.cc,objs/citerate.h,chunks.cc:  World-wrapping yet again.

2001-10-24  Ryan Nunn <triforce@merlin.net.au>
	* Too many files to even think about listing:
	  Added support for BG multiracial and added shapes. SI Required!
	  Changed lots of things to use ShapeID methods rather than the
	    Game_window alternatives.
	  Fixed Gump Problem

2001-10-23  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucsched.cc (Usecode_script): Purge() forces halt.

	* usecode/intrinsics.cc: Add moved NPC to 'nearby' list.
	* usecode/intrinsics.cc: set_lift() should check for valid number.

2001-10-23  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Makefile.*, data/bg/flx.in, data/bg/*.shp, docs/art.txt: new art
	by Oblivious
	* intrinsics.cc: fixed Tseramed join crash
	* VideoOptions_gump.*: fixed display glitch when cancelling

2001-10-23  Tristan Tarrant  <nadir@users.sourceforge.net>
	* gumps/GameplayOptions_gump.*, gamewin.*: allow choice of text
	background colour
	* usecode/conversation.cc: show background behind Avatar's text too
	* game.cc: resolved the horrible hacks to get fades at the right time

2001-10-23  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: limit 'adding to actor container' warnings to party

2001-10-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* game.h: added 'GAME_SI' and 'GAME_BG' macros for checking gametype
	* intrinsics.cc: update_last_created returns obj* in SI
	* ucinternal.cc: added warning message

2001-10-22  Tristan Tarrant  <nadir@users.sourceforge.net>
	* gamewin.*, gumps/GameplayOptions_gump.*, usecode/conversation.cc:
	implemented "Text Background" feature which puts a dark backdrop