@@ -119,7 +119,8 @@ public:
 	static void init_default_frames();	// Set usual frame sequence.
 	Actor(const std::string &nm, int shapenum, int num = -1, int uc = -1);
 	~Actor();
-	int is_blocked(Tile_coord& t);	// Blocked moving onto tile 't'?
+					// Blocked moving onto tile 't'?
+	int is_blocked(Tile_coord& t, Tile_coord *f = 0);
 	int ready_ammo();		// Find and ready appropriate ammo.
 	void ready_best_weapon();	// Find best weapon and ready it.
 	void unready_weapon(int spot);	// Try to sheath weapon.
